# WFH-Productivity-Assistant

./: .gitignore  LICENSE  README.md  events.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
.run/: Main.run.xml
app/: app.py
app/controllers/: project_manager_controller.py  task_manager_controller.py  timer_controller.py
app/utils/: theme.py
app/views/: TimerRecord.py  dashboard.py  home_page.py  pomodoro_timer.py  schedule_manager.py  sidebar.py  task_manager.py
app/views/components/: calendar_card.py  date_picker.py  project_dialogs.py  task_dialogs.py  task_item.py
tests/: test_test.py
